# portfolio

./: .gitignore  Cargo.toml  README.md  data.ron  default.nix  flake.nix  module.nix  portfolio.nix  tailwind.config.js
.github/workflows/: nix-build.yml  rust.yml
.sqlx/: query-032137e60ba20be64e0580052b13dc6f1413821598078ae4fb1102d8ccf4a29e.json  query-0a9cdbf1023d74101b7f286100dfcb4b39a6be9112d9ccc62efc84dfeb0ccf62.json  query-155c22475db37d88e501fb8c26439352f0419d0a1b17b7653ae4ed8394c02c1e.json  query-3381240fcb526eacc7e01b2a085d7c4a95ba08038d7a19d80abc12d3411775b6.json  query-6ee7d9992d46dacb99143584fb9318187525bc648ef4f1c1526303dfab571189.json  query-8482da66fb4c815cf21576e0b5c8121f5cb3a96b0a3f5e8241dbd677860c62af.json  query-9f06a38c8d9f6e6cf2051dfc4dce7582e0cc0c56435c13782b7073c3655a1ba0.json  query-dbb6b4618a5f4b08f22dfcacdc568358f3f43de08476d134ccb2efa5aaee5af1.json  query-eb4be03d77df2b21e72aa90c3c2951cda555552c46659ff7c056ac99829cf689.json
assets/js/: darkMode.js  hero.js  horizontalScroll.js  navigationPane.js  theme.js
migrations/: 20240715234527_create-projects-table.sql  20240716194434_create-projects-table.down.sql  20240716194434_create-projects-table.up.sql  20240718202201_create-tables.down.sql  20240718202201_create-tables.up.sql  20240720123652_add-sample-data.down.sql  20240720123652_add-sample-data.up.sql
src/: args.rs  data.rs  filters.rs  index.rs  main.rs  navigation.rs  not_found.rs
src/blog/: mod.rs  page.rs  post.rs
src/pages/: cv.rs  mod.rs
templates/: base.html  index.html  input.css  page.html  readme.md
(+26 files in other folders)
