[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.7.5"
clap = { version = "4.5.9", features = ["derive", "env"] }
rand = "0.8.5"
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite", "macros"] }
